{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 95,
  "lineage": "f635e2d0-d0bf-8a6f-775c-fe54638d5cc4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ext_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "8443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-09T06:19:22.763-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cactuslizard-348315/global/firewalls/cactuslizard-ext-firewall-f6d3",
            "log_config": [],
            "name": "cactuslizard-ext-firewall-f6d3",
            "network": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-extvpc-f6d3",
            "priority": 1000,
            "project": "cactuslizard-348315",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/firewalls/cactuslizard-ext-firewall-f6d3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.extvpc",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mgmt_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "8443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-09T06:19:22.834-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cactuslizard-348315/global/firewalls/cactuslizard-mgmt-firewall-f6d3",
            "log_config": [],
            "name": "cactuslizard-mgmt-firewall-f6d3",
            "network": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-mgmtvpc-f6d3",
            "priority": 1000,
            "project": "cactuslizard-348315",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/firewalls/cactuslizard-mgmt-firewall-f6d3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mgmtvpc",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "extvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/cactuslizard-348315/global/networks/cactuslizard-extvpc-f6d3",
            "mtu": 0,
            "name": "cactuslizard-extvpc-f6d3",
            "project": "cactuslizard-348315",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-extvpc-f6d3"
          },
          "dependencies": [
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "intvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/cactuslizard-348315/global/networks/cactuslizard-intvpc-f6d3",
            "mtu": 0,
            "name": "cactuslizard-intvpc-f6d3",
            "project": "cactuslizard-348315",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-intvpc-f6d3"
          },
          "dependencies": [
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mgmtvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/cactuslizard-348315/global/networks/cactuslizard-mgmtvpc-f6d3",
            "mtu": 0,
            "name": "cactuslizard-mgmtvpc-f6d3",
            "project": "cactuslizard-348315",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-mgmtvpc-f6d3"
          },
          "dependencies": [
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "external_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-09T06:19:24.010-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/cactuslizard-348315/regions/us-west1/subnetworks/cactuslizard-ext-f6d3",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "cactuslizard-ext-f6d3",
            "network": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-extvpc-f6d3",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cactuslizard-348315",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/regions/us-west1/subnetworks/cactuslizard-ext-f6d3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.extvpc",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "internal_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-09T06:19:13.431-07:00",
            "gateway_address": "10.3.0.1",
            "id": "projects/cactuslizard-348315/regions/us-west1/subnetworks/cactuslizard-int-f6d3",
            "ip_cidr_range": "10.3.0.0/16",
            "name": "cactuslizard-int-f6d3",
            "network": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-intvpc-f6d3",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cactuslizard-348315",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/regions/us-west1/subnetworks/cactuslizard-int-f6d3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.intvpc",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mgmt_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-09T06:19:23.662-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/cactuslizard-348315/regions/us-west1/subnetworks/cactuslizard-mgmt-f6d3",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "cactuslizard-mgmt-f6d3",
            "network": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-mgmtvpc-f6d3",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cactuslizard-348315",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/regions/us-west1/subnetworks/cactuslizard-mgmt-f6d3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.mgmtvpc",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "external_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.168.185.112",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-09T06:19:38.696-07:00",
            "id": "projects/cactuslizard-348315/regions/us-west1/addresses/cactuslizard-3nic-ext-publicip-0-1147",
            "name": "cactuslizard-3nic-ext-publicip-0-1147",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "cactuslizard-348315",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/regions/us-west1/addresses/cactuslizard-3nic-ext-publicip-0-1147"
          },
          "dependencies": [
            "google_compute_network.extvpc",
            "google_compute_subnetwork.external_subnetwork",
            "module.bigip.random_id.module_id",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mgmt_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.145.123.207",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-09T06:19:38.189-07:00",
            "id": "projects/cactuslizard-348315/regions/us-west1/addresses/cactuslizard-3nic-mgmt-publicip-1147",
            "name": "cactuslizard-3nic-mgmt-publicip-1147",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "cactuslizard-348315",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/regions/us-west1/addresses/cactuslizard-3nic-mgmt-publicip-1147"
          },
          "dependencies": [
            "google_compute_network.mgmtvpc",
            "google_compute_subnetwork.mgmt_subnetwork",
            "module.bigip.random_id.module_id",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "f5vm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/f5-7626-networks-public/global/images/f5-bigip-16-1-2-1-0-0-10-byol-all-modules-1boot-loc-1222202155",
                    "size": 54,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/zones/us-west1-b/disks/cactuslizard-3nic-1147"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cactuslizard-348315/zones/us-west1-b/instances/cactuslizard-3nic-1147",
            "instance_id": "8683998094084033944",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "sshKeys": "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIEPGbpvv1KJrXngbeEiYn8hnTvbnIZF/47YDmVkOs1yf jonwest1@gmail.com\n"
            },
            "metadata_fingerprint": "UmUBfS68DHI=",
            "metadata_startup_script": "#!/bin/bash\n# Setup console and startup-script logging\nLOG_FILE=/var/log/cloud/startup-script.log\nmkdir -p  /var/log/cloud\n[[ -f $LOG_FILE ]] || /usr/bin/touch $LOG_FILE\nnpipe=/tmp/$$.tmp\ntrap \"rm -f $npipe\" EXIT\nmknod $npipe p\ntee \u003c$npipe -a $LOG_FILE /dev/ttyS0 \u0026\nexec 1\u003e\u0026-\nexec 1\u003e$npipe\nexec 2\u003e\u00261\n\n# skip startup script if already complete\nif [[ -f /config/startup_finished ]]; then\n  echo \"Onboarding co [...]
            "min_cpu_platform": "Intel Skylake",
            "name": "cactuslizard-3nic-1147",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.168.185.112",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-extvpc-f6d3",
                "network_ip": "10.2.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/regions/us-west1/subnetworks/cactuslizard-ext-f6d3",
                "subnetwork_project": "cactuslizard-348315"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.145.123.207",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-mgmtvpc-f6d3",
                "network_ip": "10.1.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/regions/us-west1/subnetworks/cactuslizard-mgmt-f6d3",
                "subnetwork_project": "cactuslizard-348315"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/global/networks/cactuslizard-intvpc-f6d3",
                "network_ip": "10.3.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/regions/us-west1/subnetworks/cactuslizard-int-f6d3",
                "subnetwork_project": "cactuslizard-348315"
              }
            ],
            "project": "cactuslizard-348315",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cactuslizard-348315/zones/us-west1-b/instances/cactuslizard-3nic-1147",
            "service_account": [
              {
                "email": "svc-jw@cactuslizard-348315.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_network.extvpc",
            "google_compute_network.intvpc",
            "google_compute_network.mgmtvpc",
            "google_compute_subnetwork.external_subnetwork",
            "google_compute_subnetwork.internal_subnetwork",
            "google_compute_subnetwork.mgmt_subnetwork",
            "module.bigip.data.template_file.startup_script",
            "module.bigip.google_compute_address.external_public_ip",
            "module.bigip.google_compute_address.mgmt_public_ip",
            "module.bigip.random_id.module_id",
            "module.bigip.random_string.password",
            "random_id.id"
          ]
        }
      ]
    }
  ]
}